# GPJax

./: .cookiecutter.json  .coveragerc  .cursorrules  .flake8  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .pylintrc  .pyspelling.yml  .readthedocs.yml  404.html  CITATION.bib  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  Play.ipynb  Play_2.ipynb  Play_2_classificaiton.ipynb  Play_full.ipynb  Play_full2.ipynb  Play_precip.ipynb  Play_with_rect.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  bo_demo.ipynb  bo_demo.py  codecov.yml  gen_pages.py  index.html  index.json  index.rst  mkdocs.yml  models.py  new_kernel.ipynb  noxfile.py  (+19 more)
.asv/results/: benchmarks.json
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  assets  codecov.yml  codeql-config.yml  commitlint.config.js  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  04_DOCS_IMPROVEMENT.md  config.yml
.github/workflows/: auto-label.yml  benchmarks.yml  build_docs.yml  ci.yml  commit-lint.yml  documentation.yml  draft-pdf.yml  integration.yml  labeler.yml  pr_greeting.yml  publish.yml  release.yml  ruff.yml  security-analysis.yml  smoke.yml  stale_prs.yml  test_docs.yml  tests.yml  workflow-master.yml  workflow-pr.yml  workflow.yml
CODE_OF_CONDUCT/: index.html
GOVERNANCE/: index.html
JaxKern.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_examples/backend/: index.html
_examples/barycentres/: index.html
_examples/bayesian_optimisation/: index.html
_examples/classification/: index.html
_examples/collapsed_vi/: index.html
_examples/constructing_new_kernels/: index.html
_examples/decision_making/: index.html
_examples/deep_kernels/: index.html
_examples/graph_kernels/: index.html
benchmarks/: asv.conf.json  kernels.py  linops.py  objectives.py  predictions.py  sparse.py  stochastic.py
contributing/: index.html
design/: index.html
docs/: CODE_OF_CONDUCT.md  GOVERNANCE.md  Makefile  README.md  _api.rst  abstractions.rst  api.md  api.rst  conf.py  conf_sphinx_patch.py  config.rst  contributing.md  contributing.rst  design.md  design.rst  gps.rst  index copy.md  index.md  index.rst  installation.md  installation.rst  kernels.rst  latex_symbols.tex  likelihoods.rst  mean_functions.rst  parameters.rst  priors.rst  quadrature.rst  reference.md  refs.bib  requirements.txt  sharp_bits.md  sparse.rst  types.rst  usage.md  utils.rst  variational.rst
examples/: Natural Gradient General case.ipynb  README.md  Untitled.ipynb  backend.py  barycentres.ipynb  barycentres.pct.py  barycentres.py  baselines.pct.py  bayesian_optimisation.py  classification.ipynb  classification.pct.py  classification.py  collapsed_vi.ipynb  collapsed_vi.pct.py  collapsed_vi.py  constructing_new_kernels.py  decision_making.py  deep_kernels.pct.py  deep_kernels.py  fourier_features.ipynb  geometric_kernels.pct.py  gpjax.mplstyle  graph_edge_kernels.py  graph_kernels.ipynb  graph_kernels.pct.py  graph_kernels.py  graph_svgp.py  haiku.ipynb  haiku.pct.py  heteroscedastic_gp_example.py  index.html  intro_to_gps.ipynb  intro_to_gps.pct.py  intro_to_gps.py  intro_to_kernels.py  kernels.ipynb  kernels.pct.py  kronecker_kernels.ipynb  likelihoods_guide.py  mll_debug.py  (+27 more)
give_me_the_code/: index.html
gpblocks/: Untitled.ipynb  __init__.py  config.py  gp.py  kernel.py  likelihoods.py  mean_functions.py  parameters.py  plotters.py  samplers.py  single_file.ipynb  spectral.py  utils.py
gpjax/: __init__.py  _version.py  abstractions.py  bijectors.py  citation.py  compat.py  compat_README.md  config.py  core.py  covariance_operator.py  dataset.py  distributions.py  dtc.py  fit.py  gaussian_distribution.py  gp.py  gps.py  inference.py  integrators.py  kernel.py  kernels.py  likelihoods.py  linalg.py  lower_cholesky.py  mean_functions.py  mlls.py  natural_gradients.py  normalizer.py  numpyro_extras.py  objectives.py  optim_utils.py  parameters.py  params.py  plotting.py  precip_gp.py  predict.py  prior_densities.py  progress_bar.py  pytree.py  quadrature.py  (+18 more)
index copy/: index.html
installation/: index.html
jax_linear_operator/: __init__.py  dense_linear_operator.py  diagonal_linear_operator.py  linear_operator.py
jaxkern/: README.md  __init__.py  _version.py  base.py  computations.py  kernels.py  non_euclidean.py  nonstationary.py  stationary.py  utils.py
jaxlinop/: __init__.py  _version.py  constant_diagonal_linear_operator.py  dense_linear_operator.py  diagonal_linear_operator.py  identity_linear_operator.py  kronecker_linear_operator.py  linear_operator.py  triangular_linear_operator.py  utils.py  zero_linear_operator.py
paper/: paper.bib  paper.md
reports/: pytest.xml
requirements/:  requirements_tests.txt  dev.txt  requirements.txt  requirements_docs.txt
scripts/: format.sh  format_code.py  gen_examples.py  sharp_bits_figure.py
search/: search_index.json
sharp_bits/: index.html
static/: .pyspelling.yml  CONTRIBUTING.md  GOVERNANCE.md
stylesheets/: extra.css  permalinks.css
tasks/: prd-advanced-state-management.md  prd-dynamic-parameter-training.md  tasks-audit.md  tasks-prd-advanced-state-management.md  tasks-prd-dynamic-parameter-training.md
tests/: __init__.py  conftest.py  integration_tests.py  new.ipynb  smoke.py  test_abstractions.py  test_approximations.py  test_base.py  test_bijectors.py  test_citations.py  test_computation.py  test_config.py  test_constant_linear_operator.py  test_covariance_operator.py  test_dataset.py  test_dense_linear_operator.py  test_diagonal_linear_operator.py  test_fit.py  test_gaussian_distribution.py  test_gp.py  test_gps.py  test_identity_linear_operator.py  test_imports.py  test_integrators.py  test_kernel.py  test_kernels.py  test_likelihoods.py  test_linalg.py  test_linear_operator.py  test_lower_cholesky.py  test_main.py  test_markdown.py  test_mean_functions.py  test_module.py  test_natural_gradients.py  test_non_euclidean.py  test_nonstationary.py  test_numpyro_extras.py  test_objectives.py  test_orthogonal_additive.py  (+19 more)
(+545 files in other folders)
