[tool.poetry]
name = "gpjax"
version = "0.9.0"
description = "Gaussian processes in JAX."
authors = [
  "Thomas Pinder <tompinder@live.co.uk>",
  "Daniel Dodd <daniel_dodd@icloud.com>",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/JaxGaussianProcesses/GPJax"
repository = "https://github.com/JaxGaussianProcesses/GPJax"
include = ["LICENSE"]
documentation = "https://docs.jaxgaussianprocesses.com/"
keywords = ["gaussian-processes jax machine-learning bayesian"]
packages = [{ include = "gpjax" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jax = "<0.4.28"
jaxlib = "<0.4.28"
optax = "^0.2.1"
jaxtyping = "^0.2.10"
tqdm = "^4.66.2"
tensorflow-probability = "^0.24.0"
beartype = "^0.16.1"
cola-ml = "0.0.5"
jaxopt = "^0.8.3"
flax = "^0.8.4"
numpy = "<2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pre-commit = "^3.2.2"
interrogate = "^1.5.0"
codespell = "^2.2.4"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-pretty = "^1.1.1"
pytest-xdist = "^3.2.1"
coverage = "^7.2.2"
xdoctest = "^1.1.1"
mktestdocs = "^0.2.1"
asv = "^0.6.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.12"
mkdocstrings = { version = "^0.24.1", extras = ["python"] }
mkdocs-jupyter = "^0.24.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-git-authors-plugin = "^0.7.0"
markdown-katex = "^202112.1034"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
networkx = "^3.0"
jupytext = "^1.14.5"
ipython = "^8.11.0"
ipykernel = "^6.22.0"
watermark = "^2.3.1"
blackjax = "^0.9.6"
ipywidgets = "^8.0.5"
pandas = "^1.5.3"
pymdown-extensions = "^10.7.1"
nbconvert = "^7.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black] # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options] # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
# addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --typeguard-packages=my_package --verbosity=2 --junitxml=reports/pytest.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["gpjax", "tests"]
xfail_strict = true

[tool.ruff] # https://github.com/charliermarsh/ruff
fix = true
cache-dir = "~/.cache/ruff"
line-length = 88
src = ["gpjax", "tests"]
target-version = "py38"

[tool.ruff.lint]
select = [
  "F",
  # pycodestyle
  "E",
  "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # pylint
  "PLE",
  "PLR",
  "PLW",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
]
ignore = [
  # calls in argument defaults
  "B008",
  # space before : (needed for how black formats slicing)
  # "E203",  # not yet implemented
  # module level import not at top of file
  "E402",
  # do not assign a lambda expression, use a def
  "E731",
  "E501",
  "S303",
  "RET504",
  "S101",
  "F722",
  'PLR2004',
  "PLR0913",
]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
exclude = ["docs/"]
ignore-init-module-imports = true
dummy-variable-rgx = "^_$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"gpjax/__init__.py" = ['I', 'F401', 'E402', 'D104']
"gpjax/progress_bar.py" = ["TCH004"]
"gpjax/scan.py" = ["PLR0913"]
"gpjax/citation.py" = ["F811"]
"tests/test_base/test_module.py" = ["PLR0915"]
"tests/test_objectives.py" = ["PLR0913"]
"docs/examples/barycentres.py" = ["PLR0913"]


[tool.isort]
profile = "black"
combine_as_imports = true
force_sort_within_sections = true
force_grid_wrap = 2
skip = 'docs'

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
fail_under = 50
precision = 1
show_missing = true
skip_covered = true
exclude_lines = ["if TYPE_CHECKING:"]

[tool.coverage.run] # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml] # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = ["gpjax/__init__.py"]

[tool.codespell]
ignore-words-list = "fro" # Frobenius

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
fail-under = 64
exclude = [
  "setup.py",
  "docs",
  "tests",
  "gpjax/__init__.py",
  "gpjax/citation.py",
]
verbose = 2
quiet = false
color = true
