[bumpversion]
current_version = 0.5.0

[pytest]
testpaths = tests/

[flake8]
max-line-length = 88
max-complexity = 12
ignore = E501
select = C,E,F,W,B,B9
extend-ignore = E203, W503, F722, F821
exclude =
    versioneer.py
    jaxutils/_version.py


[tool:mypy]
warn_unused_ignores = True
warn_redundant_casts = True
ignore_missing_imports = True

[mypy-pdoc.test.example_pkg.*]
ignore_errors = True

[tool:pytest]
testpaths = tests/

[tool:pydocstyle]
convention = google

[isort]
profile = black

[metadata]
license_files = LICENSE.txt

[versioneer]
    VCS = git
    style = pep440
    versionfile_source = gpjax/_version.py
    versionfile_build = gpjax/_version.py
    tag_prefix = v
